# cinaauth

./: .dockerignore  .gitignore  .markdownlint.json  AUTH_REFACTOR_EVALUATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  CRITICAL_SECURITY_AUDIT_REPORT.md  Cargo.toml  Cargo.toml.backup  Dockerfile  Dockerfile.optimized  FEATURE_FLAGS.md  FINAL_INTEGRATION_TESTING.md  MERGE_PLAN_TUF_LAPTOP.rs  PRE_RELEASE_AUDIT.md  PROTOCOLS.md  README.md  SECURITY.md  V0.5.0-RC1_COMPLETE.md  build_errors.txt  cargo_check_mysql.txt  cargo_check_output.txt  check.py  check_results.txt  cliff.toml  clippy_audit.txt  clippy_out.txt  clippy_rc6.txt  clippy_rc7.txt  deny.toml  docker-compose.production.yml  docker-compose.yml  err.txt  err2.txt  err3.txt  err4.txt  err5.txt  err_last.txt  (+54 more)
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci-cd.yml  release.yml
analysis_tuf_laptop_files/: oauth2.rs  oauth_advanced.rs  security.rs
auth-storage-sqlite/: Cargo.toml
auth-storage-sqlite/src/: lib.rs
backup-before-enhancements-20251004-080500/: builders.rs  lib.rs
backup-before-enhancements-20251004-080500/api/: admin.rs  auth.rs  mfa.rs  mod.rs  responses.rs
backup-before-enhancements-20251004-080500/config/: mod.rs
backup-before-enhancements-20251004-080500/integrations/: unified.rs
backup-before-enhancements-20251004-080500/security/: secure_utils.rs
backup-before-enhancements-20251004-080500/utils/: mod.rs
backup-working-build-20251004-075914/: auth.rs
backup-working-build-20251004-075914/api/: health.rs  oauth2.rs  oauth_advanced.rs  security.rs  server.rs  users.rs
backup-working-build-20251004-075914/auth_modular/: user_manager.rs
backup-working-build-20251004-075914/integrations/: axum.rs
backup-working-build-20251004-075914/methods/: mod.rs
backup-working-build-20251004-075914/security/: presets.rs
backup-working-build-20251004-075914/utils/: crypto.rs  password.rs  rate_limit.rs  string.rs
benches/: auth_hot_paths.rs  auth_performance.rs  storage_simple.rs
config/: EXAMPLES.md  INTEGRATION_GUIDE.md  cinaauth.toml
config/methods/: jwt.toml  mfa.toml
docker/: .dockerignore  Dockerfile
docs/: API_PARITY_ANALYSIS.md  AUTH_METHODS_IMPLEMENTATION.md  COMPREHENSIVE_SECURITY_AUDIT.md  CRITICAL_ISSUES_DISCOVERED.md  DEPLOYMENT_GUIDE.md  DEPRECATION_PLAN.md  DOCKER_DEPLOYMENT.md  ENDPOINTS_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  PASSWORD_AUTH_IMPLEMENTATION.md  PROTOCOL_CONFIGURATION.md  QUICK_START.md  RELEASE_AUTOMATION_PLAN.md  REST_API_ENHANCEMENTS.md  REST_API_IMPLEMENTATION_PLAN.md  REST_API_SUMMARY.md  ROADMAP.md  RUST_SDK_STRATEGY.md  SECURITY_FEATURES_COMPLETE.md  STABLE_API_MAP.md  WEBAUTHN_SAML_GUIDE.md  WEB_FRAMEWORK_INTEGRATION_PLAN.md  api-reference.md  class-diagram.puml  deployment-guide.md  migration-guide.md  oauth21-security.md  storage-backends.md  web-frameworks.md
docs/api/: CLEANUP_SUMMARY.md  FILE_STRUCTURE.md  QUICKSTART.md  README-MODULAR.md  README.md  REST_API_AUDIT_AND_ACTION_PLAN.md  REST_API_DESIGN_RATIONALE.md  complete-reference.md  index-scalar.html  (+6 more)
e2e/: README.md  oauth2_comprehensive_tests.py  oauth2_integration_tests.py  oauth2_security_fixes_test.py  oauth2_security_tests.py  oauth2_security_validation.py  oauth2_system_demo.py
examples/: axum_integration.rs  basic_usage_corrected.rs  cli_auth_tool.rs  complete_rest_api_server.rs  debug_server.rs  enhanced_ergonomics.rs  oauth2_authorization_server.rs  performance_demo.rs  production_deployments.rs  simple_oauth2_server-TUF-Laptop.rs  simple_oauth2_server.rs  simple_performance_demo.rs  simple_working_deployment.rs  smskit_integration-TUF-Laptop.rs  smskit_integration.rs  test_register.rs  test_register.rs.backup  working_demo.rs
k8s/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
migration/: migration_manifest.jsonl  test_plan_status-TUF-Laptop.json  test_plan_status.json
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: apply-tuf-enhancements.ps1  build-api-docs-dark.ps1  complete-merge.ps1  install.ps1  install.sh  serve-api-docs.ps1  test-release.ps1  validate-api-routes.ps1  validate-openapi-modular.ps1
src/: audit.rs  auth-TUF-Laptop.rs  auth.rs  auth_operations.rs  authorization.rs  builders.rs  client.rs  distributed.rs  distributed_rate_limiting.rs  errors.rs  lib-TUF-Laptop.rs  lib.rs  maintenance.rs  oauth2_enhanced_storage.rs  oauth2_server.rs  permissions.rs  prelude.rs  providers.rs  threat_intelligence.rs  types.rs  user_context.rs  ws_security.rs  ws_trust.rs
templates/: simple_config.html  simple_dashboard.html  simple_login.html  simple_logs.html  simple_security.html  simple_servers.html  simple_users.html
tests/: auth_flow_tests.rs  code_quality_audit.rs  comprehensive_api_tests.rs  critical_authentication_security.rs  custom_storage_builder.rs  edge_case_comprehensive_tests.rs  edge_cases_comprehensive.rs  enterprise_auth_integration.rs  error_path_comprehensive.rs  integration_tests.rs  monitoring_comprehensive_tests.rs  multi_tenant_integration.rs  oauth21_e2e_tests.rs  oauth2_compilation_test.rs  oauth2_integration_test.rs  oauth_advanced_tests.rs  oauth_device_tests.rs  oauth_introspection_tests.rs  oauth_par_tests.rs  oidc_ciba_jarm_tests.rs  profile_utils_tests.rs  rfc_compliance_final.rs  rfc_compliance_tests.rs  security_comprehensive.rs  security_dos_protection_tests.rs  security_ip_blacklisting_tests.rs  security_mfa_tests.rs  security_rate_limiting_tests.rs  security_validation_comprehensive.rs  security_validation_critical.rs  security_validation_test.rs  security_vulnerability_detection.rs  simple_comprehensive_tests.rs  simple_enterprise_test.rs  simple_integration_test.rs  simplified_comprehensive_tests.rs  storage_mysql.rs  storage_postgres.rs  storage_redis.rs  test_coverage_gaps.rs  (+8 more)
tuf-enhancements-20251004-080316/: SUMMARY.md  auth-enhancements.md  saml-enhancements.md  server-enhancements.md
(+352 files in other folders)
