[package]
  authors       = ["Eric Evans <ciresnave@gmail.com>"]
  categories    = ["authentication", "web-programming"]
  description   = "A comprehensive, production-ready authentication and authorization framework for Rust applications"
  documentation = "https://docs.rs/auth-framework"
  edition       = "2024"
  keywords      = ["auth", "authentication", "authorization", "jwt", "oauth"]
  license       = "MIT OR Apache-2.0"
  name          = "auth-framework"
  readme        = "README.md"
  repository    = "https://github.com/ciresnave/auth-framework"
  rust-version  = "1.85"
  version       = "0.5.0-rc18"

[[bin]]
  name              = "auth-framework"
  path              = "src/bin/admin.rs"
  required-features = ["admin-binary"]

[[bin]]
  name              = "test_oauth2"
  path              = "src/bin/test_oauth2.rs"
  required-features = ["api-server"]

[dependencies]
  # Async runtime
  tokio = { version = "1.47.1", features = ["full"] }

  # JWT handling
  jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }

  # HTTP client for OAuth flows
  reqwest = { version = "0.13.2", features = ["json", "form"] }

  # Serialization
  serde      = { version = "1.0.228", features = ["derive"] }
  serde_json = "1.0.145"

  # Time handling
  chrono = { version = "0.4.42", features = ["serde"] }

  # UUID generation
  uuid = { version = "1.18.1", features = ["serde", "v4"] }

  # Email validation
  email_address = "0.2"

  # Additional format support for migration
  # Note: serde_yaml 0.9.x uses unsafe-libyaml (safe) rather than libyml (RUSTSEC-2025-0067/0068)
  serde_yaml = "0.9"
  toml       = "0.9"

  # Configuration management
  config = { version = "0.15.18", default-features = false, features = [
    "ini",
    "json",
    "ron",
    "toml",
    "yaml",
  ] }

  # Error handling
  anyhow    = "1.0.100"
  thiserror = "2.0.17"

  # Async trait support
  async-trait = "0.1.89"

  # Cryptography
  rand = { version = "0.10.0", features = ["std_rng"] }
  rand_core = "0.6"  # Compatible version for rsa crate's OsRng
  ring = "0.17.14"
  rsa = { version = "0.9", features = ["sha2"] }  # RSA-OAEP for JWE key wrapping

  # Time handling
  time = { version = "0.3.44", features = ["formatting", "parsing", "serde"] }

  # Logging and tracing
  log                = "0.4.28"
  tracing            = "0.1.41"
  tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

  # URL handling
  url = "2.5.7"

  # Base64 encoding
  base64 = "0.22.1"

  # MaxMind GeoIP2 for IP geolocation
  maxminddb = "0.27.3"

  # Threat intelligence integration
  csv                  = "1.3.1"  # For parsing threat feeds
  dirs                 = "6.0"  # For finding config directories
  ipnetwork            = "0.21" # For CIDR network parsing
  tokio-cron-scheduler = "0.15.0" # For automated feed updates

  # Hex encoding
  hex = "0.4.3"

  # SHA-2 hashing (for OAuth 2.0 PKCE and other server features)
  sha2 = "0.10.9"

  # SHA-1 hashing (for WS-Security password digest)
  sha1 = "0.10"

  # HMAC for TOTP and other authentication schemes
  hmac = "0.12"

  # Password hashing
  argon2 = "0.5.3"
  bcrypt = "0.19.0"

  # Enterprise RBAC system
  role-system = { version = "1.1.1", optional = true, features = [
    "async",
    "audit",
    "persistence",
  ] }

  # Optional Redis support
  redis = { version = "1.0.4", optional = true, features = [
    "aio",
    "tokio-comp",
  ] }

  # Rate limiting
  governor    = "0.10.1"
  nonzero_ext = "0.3.0"

  # TOTP authentication
  totp-lite = "2.0.1"

  # Base32 encoding for TOTP
  base32 = "0.5.1"

  # URL encoding utilities
  urlencoding = "2.1.3"

  # X.509 certificate parsing for OAuth 2.0 Mutual TLS (RFC 8705)
  x509-parser = "0.18.0"

  # X.509 certificate chain validation (production-grade)
  rustls-webpki = "0.103.7"

  # Fast CRC32 calculation
  crc32fast = "1.3"

  # Memory protection and zeroization
  zeroize = { version = "1.8.2", features = ["zeroize_derive"] }

  # Constant-time comparisons
  subtle = "2.5"

  # Static variable initialization
  lazy_static = "1.5.0"

  # High-performance concurrent data structures
  dashmap = "6.1"

  # Secret management
  secrecy = { version = "0.10.3", features = ["serde"] }

  # System information (disk, memory, CPU) for health metrics
  sysinfo = "0.32"

  # Performance and Observability enhancements
  metrics = { version = "0.24.2", optional = true }
  metrics-prometheus = { version = "0.11", optional = true }
  opentelemetry = { version = "0.31.0", features = ["trace"], optional = true }
  # opentelemetry-jaeger removed: unmaintained (RUSTSEC-2025-0123).
  # Use opentelemetry-otlp instead — Jaeger 1.35+ accepts OTLP natively.
  opentelemetry-otlp = { version = "0.31.0", optional = true }
  opentelemetry-prometheus = { version = "0.31.0", optional = true }
  opentelemetry_sdk = { version = "0.31.0", features = [
    "trace",
  ], optional = true }
  prometheus = { version = "0.14.0", optional = true }
  tracing-opentelemetry = { version = "0.32.0", optional = true }

  # Event sourcing and streaming
  futures      = { version = "0.3.31", optional = true }
  serde_derive = "1.0.228"
  tokio-stream = { version = "0.1.17", optional = true }

  # Configuration hot-reload
  notify = { version = "8.2.0", optional = true }

  # Memory pool optimization
  bumpalo     = { version = "3.14", optional = true }
  object-pool = { version = "0.6.0", optional = true }

  # OAuth device flows (optional enhanced device flow support)
  oauth-device-flows = { version = "0.1.0", optional = true }

  # OpenID Connect support (optional) - Updated to fix RSA dependency
  openidconnect = { version = "4.0.1", optional = true }

  # Archive extraction for threat intelligence feeds (tar.gz, zip)
  flate2 = "1"
  tar    = "0.4"
  zip    = "2"

  # Email delivery for alert notifications
  lettre = { version = "0.11", features = ["tokio1-native-tls"] }

  # Missing dependencies for 100% completion
  ldap3                 = { version = "0.12.1", optional = true }
  otpauth               = { version = "0.5.1", optional = true }  # Updated to latest available
  unicode-normalization = { version = "0.1", optional = true }

  # CLI dependencies
  clap      = { version = "4.5.48", features = ["derive"], optional = true }
  rpassword = { version = "7.4.0", optional = true }

  # TUI dependencies
  crossterm = { version = "0.29.0", optional = true } # Updated to maintain compatibility
  ratatui   = { version = "0.30.0", optional = true } # Updated to latest version
  tui-input = { version = "0.15.0", optional = true }

  # Additional utility dependencies
  colored   = { version = "3.0", optional = true }
  console   = { version = "0.16.1", optional = true }
  dialoguer = { version = "0.12", optional = true }
  indicatif = { version = "0.18", optional = true }

  # Web framework dependencies
  futures-util = { version = "0.3.31", optional = true }

  # Template engine for web GUI
  askama = { version = "0.15.4", optional = true }
  # Note: askama_axum was removed in askama 0.13+ - axum integration is now built into askama

  # XML processing for SAML
  quick-xml = { version = "0.39.2", features = ["serialize"], optional = true }

  # XML-DSig signature validation for SAML
  bergshamra = { version = "0.3", optional = true }
  p256 = { version = "0.13", features = ["ecdsa", "pkcs8"], optional = true }
  p384 = { version = "0.13", features = ["ecdsa", "pkcs8"], optional = true }

  # Passkey/WebAuthn dependencies
  coset          = { version = "0.3.8", optional = true } # Pinned to match passkey's coset dep
  passkey        = { version = "0.5.0", optional = true } # Updated to latest version
  passkey-client = { version = "0.5.0", optional = true } # Updated to latest version

  # Web framework integrations (optional)
  actix-web = { version = "4.11.0", optional = true }
  axum = { version = "0.8.6", features = ["macros"], optional = true }
  serde_urlencoded = { version = "0.7", optional = true }
  tower = { version = "0.5.2", features = ["util"], optional = true }
  tower-http = { version = "0.6.6", features = [
    "cors",
    "fs",
    "trace",
  ], optional = true }
  warp = { version = "0.4.2", features = ["server", "test"], optional = true }

  # Database integrations (optional) - Updated sqlx to fix RSA vulnerability
  sqlx = { version = "0.8.6", features = [
    "chrono",
    "mysql",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
  ], optional = true }
  tokio-postgres = { version = "0.7.14", optional = true }

  # Testing infrastructure (optional)
  html-escape    = "0.2.13"
  testcontainers = { version = "0.27.1", optional = true }

  # SMSKit dependencies for next-gen SMS support
  regex           = "1.11.3"
  sms-aws-sns     = { version = "0.2.0", optional = true }
  sms-core        = { version = "0.2.0", optional = true }
  sms-plivo       = { version = "0.2.0", optional = true }
  sms-twilio      = { version = "0.2.0", optional = true }
  sms-web-axum    = { version = "0.2.0", optional = true }
  sms-web-generic = { version = "0.2.0", optional = true }
cryptoki = "0.12.0"

[dev-dependencies]
  axum-test  = "19.1.1"
  criterion  = { version = "0.8.2", features = ["async_tokio", "html_reports"] }
  fastrand   = "2.0"
  mockito    = "1.2"
  tempfile   = "3.23.0"
  test-log   = "0.2"
  tokio-test = "0.4.4"

[features]
  default = [
    "enhanced-rbac",    # Re-enabled for comprehensive authorization testing
    "postgres-storage",
  ] # PostgreSQL recommended
  enhanced-device-flow = ["oauth-device-flows"]
  mysql-storage = ["sqlx"]
  openid-connect = ["openidconnect"]
  postgres-storage = ["sqlx", "tokio-postgres"]
  redis-storage = ["redis"]
  testing = []
  # Enhanced cryptography features
  distributed-rate-limiting = ["redis"]
  enhanced-crypto           = ["chacha20poly1305", "ed25519-dalek", "x25519-dalek"]
  fips-compliance           = ["aws-lc-rs"]

  # Enterprise RBAC with role-system v1.0
  enhanced-rbac = ["api-server", "role-system"]

  # Additional features referenced in code
  actix-integration = ["actix-web", "futures-util"]
  admin-binary = ["cli", "tui", "web-gui"]
  api-server = ["axum", "tower", "tower-http"]
  axum-integration = ["axum", "serde_urlencoded", "tower", "tower-http"]
  cli = [
    "clap",
    "colored",
    "console",
    "dialoguer",
    "indicatif",
    "rpassword",
    "tokio-postgres",
  ]
  docker-tests = ["testcontainers"]
  ldap-auth = ["ldap3"]
  otp-auth = ["otpauth"]
  passkeys = ["coset", "passkey", "passkey-client"]
  saml = ["bergshamra", "p256", "p384", "quick-xml"]
  tui = ["colored", "console", "crossterm", "indicatif", "ratatui", "tui-input"]
  unicode-support = ["unicode-normalization"]
  warp-integration = ["warp"]
  web-gui = ["askama", "axum", "serde_urlencoded", "tower", "tower-http"]

  # Enhanced performance and observability
  config-hot-reload = ["notify"]
  enhanced-observability = [
    "futures",
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry-prometheus",
    "tokio-stream",
    "tracing-opentelemetry",
  ]
  event-sourcing = ["futures", "notify", "tokio-stream"]
  performance-optimization = [
    "bumpalo",
    "metrics",
    "metrics-prometheus",
    "object-pool",
    "prometheus",
  ]
  tiered-storage = ["postgres-storage", "redis"]

  # SMSKit integration (next-generation SMS support)
  smskit = [
    "sms-aws-sns",
    "sms-core",
    "sms-plivo",
    "sms-twilio",
    "sms-web-generic",
  ]
  smskit-web-axum = ["axum-integration", "sms-web-axum", "smskit"]

  # Enhanced cryptography dependencies
  [dependencies.aes-gcm]
    optional = false  # Enable by default for encryption support
    version  = "0.10.3"

  [dependencies.chacha20poly1305]
    optional = true
    version  = "0.10"

  [dependencies.x25519-dalek]
    optional = true
    version  = "2.0"

  [dependencies.ed25519-dalek]
    features = ["rand_core"]
    optional = true
    version  = "2.2.0"

  [dependencies.aws-lc-rs]
    features = ["aws-lc-sys"]
    optional = true
    version  = "1.14.1"

  [dependencies.parking_lot]
    version = "0.12.5"

  [dependencies.getrandom]
    features = ["std"]
    version  = "0.4.2"

[[bench]]
  harness = false
  name    = "auth_performance"

[[example]]
  name = "performance_demo"
  required-features = [
    "enhanced-observability",
    "event-sourcing",
    "performance-optimization",
  ]

[[example]]
  name              = "complete_rest_api_server"
  path              = "examples/complete_rest_api_server.rs"
  required-features = ["api-server"]
