[package]
    edition = "2021"
    name    = "auth-storage-sqlite"
    version = "0.1.0"

[dependencies]
    async-trait    = "0.1.86"
    auth-framework = { path = "../" }
    chrono         = { version = "0.4.38", features = ["serde"] }
    serde          = { version = "1", features = ["derive"] }
    serde_json     = "1"
    sqlx           = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
    tokio          = { version = "1", features = ["full"] }
